@@ -5,6 +5,7 @@ import brainight.jutils.args.CmdArgsHolder;
 import brainight.jutils.args.annotations.wrappers.Argument;
 import brainight.jutils.args.annotations.wrappers.Option;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Github: https://github.com/Brainight
@@ -15,12 +16,12 @@ public class PathArgHandler implements ArgHandler<Path> {
 
     @Override
     public Path parseArgument(CmdArgsHolder args, Argument a, Object target) throws ArgsException {
-        return Path.of(args.getCurrent());
+        return Paths.get(args.getCurrent());
     }
 
     @Override
     public Path parseOption(CmdArgsHolder args, Option o, Object target) throws ArgsException {
-        return Path.of(args.getNext());
+        return Paths.get(args.getNext());
     }
 
 }
